[package]
name = "rainbow-dqn-rs"
version = "0.1.0"
authors = [ "Chris Ohk <utilforever@gmail.com>" ]
edition = "2021"
description = "A step-by-step tutorial from DQN to Rainbow using Rust and tch-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.7.2"
ndarray = "0.15.4"
rand = "0.8.5"
cpython = "0.7.0"
